Refactored existing code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ tmdb.api.get-search=search/multi?api_key=${tmdb.api.key}&query={query}&page=1
 tmdb.api.genre-field.name=name
 tmdb.api.rating.pattern=#.#
 tmdb.api.external-ids-field.imdb-id=imdb_id
+tmdb.api.image.base_url=https://image.tmdb.org/t/p/original
